--- a/_settings.tex
+++ b/_settings.tex
@@ -203,5 +203,8 @@ number = {\textnumero}%
 \binoppenalty=9999
 \relpenalty=9999
 
+% Рекомендация разрешать делать пробелы вместо слов, выезжающих за границы строк
+\emergencystretch=10em
+
 % Упрощение ввода некоторых иностранных слов
 \newcommand{\blockchain}{\foreignlanguage{english}{block\-chain}}
