(#6003) Деннинга-Сакко => Деннинг-Сакко

--- a/appendix/questions-4.tex
+++ b/appendix/questions-4.tex
@@ -19,7 +19,7 @@
     \item Терморектальный криптоанализ. Формулировка основной теоремы, идея доказательства. Свойства, примеры использования.
     \item Современные потоковые шифры на примере A5/1. Общий вид, требования, характеристики и анализ защищённости.
     \item Современные потоковые шифры на примере RC4. Общий вид, требования, характеристики и анализ защищённости.
-    \item Задача о словаре и хэш-функции. Коллизии в хеш-фунциях. Криптографически стойкие хеш-функции. Свойства, принципы построения криптографически стойких хэш-функций (стандарта США или ГОСТ Р 34.11-2012 <<СТРИБОГ>>). Структуры Меркла-Дамгарда, Миагучи-Пренеля. Использование хеш-функций в криптографии.
+    \item Задача о словаре и хэш-функции. Коллизии в хеш-фунциях. Криптографически стойкие хеш-функции. Свойства, принципы построения криптографически стойких хэш-функций (стандарта США или ГОСТ Р 34.11-2012 <<СТРИБОГ>>). Структуры Меркла~---~Дамгарда, Миагучи~---~Пренеля. Использование хеш-функций в криптографии.
     \item База данных на основе Echo-сети. Blockchain. Доказательство работы (proof-of-work, proof-of-share). BitCoin.
     \item Односторонние функции с потайной дверцей. Пример, не связанный с задачами из области теории чисел (т.е. не факторизация, не дискретный логарифм, etc.) Возможность использования односторонних функций в криптографии. Общие идеи использования криптографии с открытым ключом для шифрования. Проблемы криптографической стойкости, производительности.
     \item Цифровые подписи. Цели, основные принципы получения и использования. Конкретные примеры использования цифровых подписей в современных информационных системах.
@@ -28,9 +28,9 @@
     \item Шифрование с открытым ключом с использованием эллиптических кривых. Схемы DLIES и ECIES.
     \item Цифровые подписи, требования к ним и характеристики на примере стандарта ГОСТ Р 34.10-2001.
     \item PKI. Централизованная и децентрализованная схема реализации. Использование на примере программ серии PGP, протокола HTTPS, для защиты ПО.
-    \item Протоколы аутентификации и идентификации сторон на основе систем симметричного шифрования. Построение, плюсы и минусы, криптографическая стойкость на примере протоколов Yahalom и Нидхема-Шрёдера.
-    \item Протоколы аутентификации и идентификации сторон на основе систем асимметричного шифрования. Построение, плюсы и минусы, криптографическая стойкость на примере протокола DASS, Деннинга-Сакко или Ву-Лама.
-    \item Протоколы распространения ключей. Протокол Диффи-Хелл\-ма\-на для мультипликативной группы и для группы точек эллиптической кривой.
+    \item Протоколы аутентификации и идентификации сторон на основе систем симметричного шифрования. Построение, плюсы и минусы, криптографическая стойкость на примере протоколов Yahalom и Нидхема~---~Шрёдера.
+    \item Протоколы аутентификации и идентификации сторон на основе систем асимметричного шифрования. Построение, плюсы и минусы, криптографическая стойкость на примере протокола DASS, Деннинг~---~Сакко или Ву~---~Лама.
+    \item Протоколы распространения ключей. Протокол Диффи~---~Хеллмана для мультипликативной группы и для группы точек эллиптической кривой.
     \item Протоколы распространения ключей. Протоколы MTI, STS, Жиро (два на выбор).
     \item Квантовый протокол распространения ключей BB84.
     \item Разделение секрета. Пороговые схемы разделения секрета Шамира и Блэкли (подробно).
@@ -47,7 +47,7 @@
     \item Порядок разработки системы управления защитой информации по ISO2700x.
     \item Китайская теорема об остатках. Доказательство, использование для защиты информации. Использование КТО при доказательстве корректности криптосистемы RSA.
     \item <<Длинная>> модульная арифметика, использование в криптографии. Быстрое <<левое>> и <<правое>> возведение в степень, расширенный алгоритм Евклида.
-    \item Проверка чисел на простоту с использованием тестов Ферма, Миллера, Миллера-Рабина (подробно).
+    \item Проверка чисел на простоту с использованием тестов Ферма, Миллера, Миллера~---~Рабина (подробно).
     \item Группы, подгруппы, генераторы, циклические группы. Примеры, построение, операции, свойства, использование в криптографии.
     \item Поля Галуа вида $\mathbb{GF}(p)$ и $\mathbb{GF}(2^n)$. Построение, операции, свойства, использование в криптографии.
     \item Группы точек эллиптической кривой над множеством рациональных чисел и над конечными полями. Построение, операции, свойства. Теорема Хассе. Использование в криптографии.
