--- a/appendix/questions-5.tex
+++ b/appendix/questions-5.tex
@@ -19,7 +19,7 @@
     \item Протокол Station-to-Station. Описание, плюсы и минусы, возможные атаки, известные модификации.
     \item Схема Жиро. Описание, плюсы и минусы, возможные атаки, известные модификации.
     \item Схема Блома. Описание, плюсы и минусы, возможные атаки, известные модификации.
-    \item Протокол Деннинга~---~Сакко. Описание, плюсы и минусы, возможные атаки, известные модификации.
+    \item Протокол Деннинг~---~Сакко. Описание, плюсы и минусы, возможные атаки, известные модификации.
     \item Протокол DASS. Описание, плюсы и минусы, возможные атаки, известные модификации.
     \item Протокол Ву~---~Лама. Описание, плюсы и минусы, возможные атаки, известные модификации.
     \item Протокол BB84. Описание, плюсы и минусы, возможные атаки, известные модификации.
