--- a/protocols/attacks.tex
+++ b/protocols/attacks.tex
@@ -22,7 +22,7 @@
 
     \item[TF] Атака подмены типа\\*
         \langen{type flaw attack}
-    \item[{}] Класс атак, в котором злоумышленник используя переданное в легальном сеансе протокола сообщение конструирует новое, передавая его на другом проходе (раунде) протокола под видом сообщения другого типа (с другим предназначением). К таким атакам уязвимы, например, протоколы Wide-Mouth Frog\index{протокол!Wide-Mouth Frog} из раздела~\ref{section-protocols-wide-moth-frog}, Деннинга~---~Сакко\index{протокол!Деннинга~---~Сакко}, Отвей~---~Рииса\index{протокол!Отвей~---~Рииса}, а также некоторые варианты протокола Yahalom\index{протокол!Yahalom}.
+    \item[{}] Класс атак, в котором злоумышленник используя переданное в легальном сеансе протокола сообщение конструирует новое, передавая его на другом проходе (раунде) протокола под видом сообщения другого типа (с другим предназначением). К таким атакам уязвимы, например, протоколы Wide-Mouth Frog\index{протокол!Wide-Mouth Frog} из раздела~\ref{section-protocols-wide-moth-frog}, Деннинг~---~Сакко\index{протокол!Деннинг~---~Сакко}, Отвей~---~Рииса\index{протокол!Отвей~---~Рииса}, а также некоторые варианты протокола Yahalom\index{протокол!Yahalom}.
 
     \item[PS] Атака с параллельными сеансами\\*
         \langen{parallel-session attack}
