--- a/protocols/dass.tex
+++ b/protocols/dass.tex
@@ -20,7 +20,7 @@
 
 Протокол DASS являлся составной частью сервиса распределённой аутентификации DASS (\langen{Distributed Authentication Security Service}), разработанного компанией DEC и описанного в RFC 1507~\cite{rfc1507} в сентябре 1993 года.
 
-В протоколе DASS, по аналогии с протоколами Wide-Mouth Frog и Деннинга~---~Сакко, инициатор (Алиса) генерирует и новый сеансовый ключ, и, для каждого сеанса протокола, новую пару открытого и закрытого ключей отправителя. Доверенный центр (Трент) используется как хранилище сертификатов открытых ключей участников. Но в отличие от Деннинга~---~Сакко к доверенному центру обращаются по очереди оба участника.
+В протоколе DASS, по аналогии с протоколами Wide-Mouth Frog и Деннинг~---~Сакко, инициатор (Алиса) генерирует и новый сеансовый ключ, и, для каждого сеанса протокола, новую пару открытого и закрытого ключей отправителя. Доверенный центр (Трент) используется как хранилище сертификатов открытых ключей участников. Но в отличие от Деннинг~---~Сакко к доверенному центру обращаются по очереди оба участника.
 
 \begin{protocol}
     \item[(1)] $Alice \to \left\{ B \right\} \to Trent$
